--- a/embold.com/nav-product.html
+++ b/embold.com/nav-product.html
@@ -3,13 +3,13 @@
     <a href="index.html"><img src="images/logo-embold.svg" width="113" height="20" /></a>
   </div>
   <div class="nav-wrap-items">
-    <div class="nav-item-main nav-item-main-product active-menu">
+    <div class="nav-item-main nav-item-main-product">
       <span class="product" id="menu-item-product">Product <i class="fas fa-angle-down"></i></span>
     </div>
     <div class="nav-item-main nav-item-main-solutions">
       <span class="user-stories" id="menu-item-solutions">Solutions <i class="fas fa-angle-down"></i></span>
     </div>
-    <div class="nav-item-main nav-item-main-resources">
+    <div class="nav-item-main nav-item-main-resources active-menu">
       <span class="resources"id="menu-item-resources">Resources <i class="fas fa-angle-down"></i></span>
     </div>
     <div class="nav-item-main nav-item-main-company">
