--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -488,5 +488,6 @@
     </div>
   </div>
   <script src="js/main.js" type="text/javascript"></script>
+  <script src="js/nav.js" type="text/javascript"></script>
 </body>
 </html>
