--- a/embold.com/company-about.html
+++ b/embold.com/company-about.html
@@ -77,6 +77,7 @@
       </div>
     </div>
   </section>
+  <a name="overall"></a>
   <section class="container block block-section-sub block-section-left">
     <div class="row">
       <div class="col-6">
@@ -115,6 +116,7 @@
       </div>
     </div>
   </section>
+  <a name="timeline"></a>
   <section class="block block-section-sub timeline">
     <div class="container">
       <div class="row">
@@ -133,7 +135,7 @@
       </div>
     </div>
   </section>
-
+  <a name="offices"></a>
   <section class="container block block-section-sub block-section-left company-offices">
     <div class="row">
       <div class="col-12">
