--- a/embold.com/product-overview.html
+++ b/embold.com/product-overview.html
@@ -14,9 +14,7 @@
   crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="nav-product">
-
-  </div>
+  <div class="nav-product"></div>
 
   <div class="container block block-header-sub">
     <div class="row">
@@ -26,12 +24,12 @@
     </div>
     <div class="header-image bg-product-overview"></div>
   </div>
-
+  <a name="bug-prediction"></a>
   <section class="container block block-section-sub block-section-left">
     <div class="row">
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Ruleless Static Analysis</h2>
+        <h2 class="section-title">Bug Prediction</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="col-5">
@@ -39,6 +37,7 @@
       </div>
     </div>
   </section>
+  <a name="recommendation"></a>
   <section class="container block block-section-sub block-section-right">
     <div class="row">
       <div class="col-1">
@@ -49,20 +48,37 @@
       </div>
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Hotspot Rating Engine for your Code</h2>
+        <h2 class="section-title">Recommendation Engine</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
     </div>
   </section>
+  <a name="scoring"></a>
   <section class="container block block-section-sub block-section-left">
     <div class="row">
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">NCP</h2>
+        <h2 class="section-title">Scoring and A.I. Base Priorization</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="col-5">
         <div class="il-alt background-no-repeat body-illustration"></div>
+      </div>
+    </div>
+  </section>
+  <a name="refactoring"></a>
+  <section class="container block block-section-sub block-section-right">
+    <div class="row">
+      <div class="col-1">
+
+      </div>
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
+      </div>
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">Refactoring</h2>
+        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
     </div>
   </section>
