--- a/embold.com/user-stories-industry-tmt.html
+++ b/embold.com/user-stories-industry-tmt.html
@@ -34,7 +34,7 @@
             Select a your role
           </div>
           <div class="tab-wrap">
-            <div class="tab-item active" onclick="window.location.href='./user-stories-industry.html'">
+            <div class="tab-item" onclick="window.location.href='./user-stories-industry.html'">
               <div class="tab-item-icon ic-sm-user-executive"></div> <span>Automotive</span>
             </div>
             <div class="tab-item" onclick="window.location.href='./user-stories-industry-energy.html'">
@@ -43,7 +43,7 @@
             <div class="tab-item" onclick="window.location.href='./user-stories-industry-financial.html'">
               <div class="tab-item-icon ic-sm-user-architect"></div> <span>Financial and Insurance</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-tmt.html'">
+            <div class="tab-item active" onclick="window.location.href='./user-stories-industry-tmt.html'">
               <div class="tab-item-icon ic-sm-user-pm"></div> <span>TMT</span>
             </div>
             <div class="tab-item" onclick="window.location.href='./user-stories-industry-natural.html'">
