--- a/embold.com/user-stories-solution-approach.html
+++ b/embold.com/user-stories-solution-approach.html
@@ -25,131 +25,61 @@
     <div class="header-image bg-solutions-solution-approach"></div>
   </div>
 
-  <div class="tab-role">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="tab-title">
-            <img src="./images/ic-md-arrow-slim-right.svg" width="40" height="40" /><br />
-            Select a your role
-          </div>
-          <div class="tab-wrap">
-            <div class="tab-item active">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Executive</span>
-            </div>
-            <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developer</span>
-            </div>
-            <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architect</span>
-            </div>
-            <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Manager</span>
-            </div>
-          </div>
-        </div>
+  <a name="deployment"></a>
+  <section class="container block block-section-sub block-section-left">
+    <div class="row">
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">Deployment Options</h2>
+        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+      </div>
+      <div class="col-5">
+        <div class="il-product-overview-ruleless-static background-no-repeat body-illustration"></div>
       </div>
     </div>
-  </div>
+  </section>
+  <a name="solution"></a>
+  <section class="container block block-section-sub block-section-right">
+    <div class="row">
+      <div class="col-1">
 
-  <section class="block block-sub-user-stories">
-    <div class="container">
-      <div class="row">
-        <div class="col-3">
-          <div class="block-sub-menu">
-            <ul class="sub-menu">
-              <li>OVERALL</li>
-              <li>ACTUAL STORIES</li>
-              <li>USE CASES</li>
-              <li>CONTACT SALES</li>
-            </ul>
-            <ul class="sub-menu">
-              <li>DOWNLOAD</li>
-              <li>Sing-up Now</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-9">
-          <div class="block-user-story">
-            <div class="wrap-content headcopy">
-              “You are a Good Executive<br />
-              But, you have a chance to be Great Executive”
-            </div>
-            <div class="wrap-content overall">
-              <h4>Overall</h4>
-              <h3>EMBOLD For Excutives</h3>
-              <p>
-                As software has become the backbone of competitive advantage in all industries, bugs have become a monster of the modern executive. But while executive careers increasingly hinge on their IT and software infrastructure, most executives do not feel empowered to talk with their IT and feel distached from the risk they carry.
-              </p>
-            </div>
-            <div class="wrap-content actual-story">
-              <h4>Actual Stories</h4>
-              <h3>EMBOLD</h3>
-              <p>
-                - A looking glass for executives to understand the risk and rewards of their software operations<br />
-                - Reconnects executives with their most relevant resources: The developers
-              </p>
-              <div class="block-quote">
-                Content from quotation
-              </div>
-            </div>
-            <div class="wrap-content user-story">
-              <h4>Use Cases</h4>
-              <div class="tab-user-story">
-                <div class="tab-item active">
-                  <div class="logo logo-small-deutsche-leasing">
-                  </div>
-                  <div class="case-number">
-                    Case 1
-                  </div>
-                  <div class="company-name">
-                    Deutsche Leasing
-                  </div>
-                </div>
-                <div class="tab-item">
-                  <div class="logo logo-small-deutsche-leasing">
-                  </div>
-                  <div class="case-number">
-                    Case 1
-                  </div>
-                  <div class="company-name">
-                    Deutsche Leasing
-                  </div>
-                </div>
-                <div class="tab-item">
-                  <div class="logo logo-small-deutsche-leasing">
-                  </div>
-                  <div class="case-number">
-                    Case 1
-                  </div>
-                  <div class="company-name">
-                    Deutsche Leasing
-                  </div>
-                </div>
-              </div>
-              <h3>
-                Deutsche Leasing
-              </h3>
-              <div class="paragraph">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum aliquet risus vitae nisl egestas luctus. Nulla tempus tortor a dui fringilla tincidunt. Cras consequat sed nulla eu eleifend. Nullam consectetur lacus dolor, et consectetur enim accumsan at. Aenean commodo molestie lectus, venenatis fermentum nisl pellentesque vel. Proin eros ipsum, feugiat vitae urna eget, pellentesque porttitor metus. Aenean eleifend sed enim ut pharetra. Nullam molestie nunc ante, eu maximus diam ultrices sit amet. Integer fermentum posuere nisi, non placerat felis condimentum fringilla. Proin tincidunt ante dolor, non lobortis nibh porttitor et. Donec fringilla rhoncus consequat. Duis maximus sodales elementum. Nulla pharetra tortor dapibus, maximus quam dignissim, molestie purus. Morbi ut auctor neque, at aliquet eros.
-                </p>
-                <p>
-                  Aenean nec quam eget felis varius dictum vel quis nibh. Vestibulum accumsan urna ac dui sagittis tempus. Nulla interdum malesuada odio facilisis volutpat. Mauris pellentesque et felis nec ornare. Suspendisse libero ante, vestibulum in ligula id, rhoncus consectetur neque. Suspendisse in erat ac ligula pretium facilisis ac nec ante. Suspendisse egestas iaculis justo, in hendrerit metus placerat in. Vestibulum ac ultricies mauris, eu viverra odio. Phasellus sit amet aliquet erat. Duis cursus euismod enim, id pellentesque orci porta sit amet. Fusce felis nunc, pretium sit amet elit id, porta accumsan mauris. In faucibus mauris ut egestas hendrerit. Sed ac laoreet est. Donec elit tellus, imperdiet et risus hendrerit, rhoncus laoreet nisi. Mauris tincidunt diam quis orci gravida, ut eleifend mauris fermentum. Nunc finibus vehicula justo, elementum iaculis libero laoreet ac.
-                </p>
-                <p>
-                  Nullam eu bibendum ante. Pellentesque eget scelerisque sem. Nam sollicitudin felis nunc, sed vehicula ex sollicitudin id. Nulla arcu nulla, condimentum sit amet lacus in, accumsan dictum turpis. Nulla at tincidunt arcu. Proin ac magna libero. In lacus elit, facilisis vitae odio a, auctor iaculis sem. In iaculis ex diam, eget pharetra augue blandit eu.
-                </p>
-              </div>
-            </div>
-            <div class="wrap-content contact-sales">
-              <h4>Contact Sales</h4>
-              <div class="block-contact-sales">
-                Benjamin
-              </div>
-            </div>
-          </div>
-        </div>
+      </div>
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
+      </div>
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">Solution Engineerings Approach</h2>
+        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+      </div>
+    </div>
+  </section>
+  <a name="service"></a>
+  <section class="container block block-section-sub block-section-left">
+    <div class="row">
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">Service Offerings</h2>
+        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+      </div>
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
+      </div>
+    </div>
+  </section>
+  <a name="customer"></a>
+  <section class="container block block-section-sub block-section-right">
+    <div class="row">
+      <div class="col-1">
+
+      </div>
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
+      </div>
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">Customer Success</h2>
+        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
     </div>
   </section>
