--- a/embold.com/user-stories-user-roles-developer.html
+++ b/embold.com/user-stories-user-roles-developer.html
@@ -19,10 +19,10 @@
   <div class="container block block-header-sub">
     <div class="row">
       <div class="col-6">
-        <h1 class="header-sub-title">By Industry</h1>
+        <h1 class="header-sub-title">By User roles</h1>
       </div>
     </div>
-    <div class="header-image bg-user-stories-industry "></div>
+    <div class="header-image bg-user-stories-user-roles "></div>
   </div>
 
   <div class="tab-role">
@@ -34,20 +34,17 @@
             Select a your role
           </div>
           <div class="tab-wrap">
-            <div class="tab-item active" onclick="window.location.href='./user-stories-industry.html'">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Automotive</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles.html'">
+              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Executive</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-energy.html'">
-              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Energy</span>
+            <div class="tab-item active" onclick="window.location.href='./user-stories-user-roles-developer.html'">
+              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developer</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-financial.html'">
-              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Financial and Insurance</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-architect.html'">
+              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architect</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-tmt.html'">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>TMT</span>
-            </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-natural.html'">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Natural Resources</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-pm.html'">
+              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Manager</span>
             </div>
           </div>
         </div>
@@ -62,7 +59,7 @@
           <div class="block-sub-menu">
             <ul class="sub-menu">
               <li>OVERALL</li>
-              <li>ACTUAL STORIES</li>
+              <li>CUSTOMER STORIES</li>
               <li>USE CASES</li>
               <li>CONTACT SALES</li>
             </ul>
