--- a/embold.com/user-stories-user-roles.html
+++ b/embold.com/user-stories-user-roles.html
@@ -34,16 +34,16 @@
             Select a your role
           </div>
           <div class="tab-wrap">
-            <div class="tab-item active">
+            <div class="tab-item active" onclick="window.location.href='./user-stories-user-roles.html'">
               <div class="tab-item-icon ic-sm-user-executive"></div> <span>Executive</span>
             </div>
-            <div class="tab-item">
+            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-developer.html'">
               <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developer</span>
             </div>
-            <div class="tab-item">
+            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-architect.html'">
               <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architect</span>
             </div>
-            <div class="tab-item">
+            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-pm.html'">
               <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Manager</span>
             </div>
           </div>
