--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -45,43 +45,43 @@
           <div class="nav-item-main">
             <a href="product-overview.html" class="nav-menu-link">Overview</a>
             <ul class="nav-item-sub-list">
-              <li>Bug Prediction</li>
-              <li>Recommendation Engine</li>
-              <li>Scoring and A.I. Base Priorization</li>
-              <li>Refactoring</li>
+              <li><a href="product-overview.html#bug-prediction">Bug Prediction</a></li>
+              <li><a href="product-overview.html#recommendation">Recommendation Engine</a></li>
+              <li><a href="product-overview.html#scoring">Scoring and A.I. Base Priorization</a></li>
+              <li><a href="product-overview.html#refactoring">Refactoring</a></li>
             </ul>
           </div>
           <div class="nav-item-main">
             <a href="product-features.html" class="nav-menu-link">Features</a>
             <ul class="nav-item-sub-list">
-              <li>Artificial Intelligence</li>
-              <li>Integrated Platform</li>
-              <li>Accuracy and Completeness</li>
+              <li><a href="product-features.html#artificial">Artificial Intelligence</a></li>
+              <li><a href="product-features.html#integrated">Integrated Platform</a></li>
+              <li><a href="product-features.html#accuracy">Accuracy and Completeness</a></li>
             </ul>
           </div>
           <div class="nav-item-main">
             <a href="product-use-cases.html" class="nav-menu-link">Use Cases</a>
             <ul class="nav-item-sub-list">
-              <li>Productivity Management</li>
-              <li>Technical Debt Management</li>
-              <li>Supplier Monitoring</li>
-              <li>Onboarding and Training</li>
+              <li><a href="product-use-cases.html#productivity">Productivity Management</a></li>
+              <li><a href="product-use-cases.html#technical">Technical Debt Management</a></li>
+              <li><a href="product-use-cases.html#supplier">Supplier Monitoring</a></li>
+              <li><a href="product-use-cases.html#onboarding">Onboarding and Training</a></li>
             </ul>
           </div>
           <div class="nav-item-main">
             <a href="product-pricing.html" class="nav-menu-link">Pricing</a>
             <ul class="nav-item-sub-list">
-              <li>Cloud</li>
-              <li>On-Premise</li>
-              <li>Assessment Services</li>
+              <li><a href="product-pricing.html">Cloud</a></li>
+              <li><a href="product-pricing-on-premise.html">On-Premise</a></li>
+              <li><a href="product-pricing-enterprise.html">Assessment Services</a></li>
             </ul>
           </div>
           <div class="nav-item-main">
             <a href="product-partnership.html" class="nav-menu-link">Partnership</a>
             <ul class="nav-item-sub-list">
-              <li>Partnership</li>
-              <li>Open Source Sponsorships</li>
-              <li>Crypto</li>
+              <li><a href="product-partnership.html#partnership">Partnership</a></li>
+              <li><a href="product-partnership.html#open-source">Open Source Sponsorships</a></li>
+              <li><a href="product-partnership.html#crypto">Crypto</a></li>
             </ul>
           </div>
           <div class="cb"></div>
@@ -95,38 +95,38 @@
           <div class="nav-item-main">
             <a href="user-stories-user-roles.html" class="nav-menu-link">By User Role</a>
             <ul class="nav-item-sub-list">
-              <li>Executives</li>
-              <li>Project Managers</li>
-              <li>Architects</li>
-              <li>Developers</li>
+              <li><a href="user-stories-user-roles.html">Executives</li>
+              <li><a href="user-stories-user-roles-pm.html">Project Managers</li>
+              <li><a href="user-stories-user-roles-architect.html">Architects</li>
+              <li><a href="user-stories-user-roles-developer.html">Developers</li>
             </ul>
           </div>
           <div class="nav-item-main">
             <a href="user-stories-team-size.html" class="nav-menu-link">By Team Size</a>
             <ul class="nav-item-sub-list">
-              <li>Individuals</li>
-              <li>Teams</li>
-              <li>Business</li>
-              <li>Enterprise</li>
+              <li><a href="user-stories-team-size.html">Individuals</li>
+              <li><a href="user-stories-team-size-teams.html">Teams</li>
+              <li><a href="user-stories-team-size-business.html">Business</li>
+              <li><a href="user-stories-team-size-enterprise.html">Enterprise</li>
             </ul>
           </div>
           <div class="nav-item-main">
             <a href="user-stories-industry.html" class="nav-menu-link">By Industry</a>
             <ul class="nav-item-sub-list">
-              <li>Automotive</li>
-              <li>Energy</li>
-              <li>Financial and Insurance</li>
-              <li>TMT</li>
-              <li>Natural Resources</li>
+              <li><a href="user-stories-industry.html">Automotive</li>
+              <li><a href="user-stories-industry-energy.html">Energy</li>
+              <li><a href="user-stories-industry-financial.html">Financial and Insurance</li>
+              <li><a href="user-stories-industry-tmt.html">TMT</li>
+              <li><a href="user-stories-industry-natural.html">Natural Resources</li>
             </ul>
           </div>
           <div class="nav-item-main">
             <a href="user-stories-solution-approach.html" class="nav-menu-link">Solution Approach</a>
             <ul class="nav-item-sub-list">
-              <li>Deployment Options</li>
-              <li>Solution Engineerings Approach</li>
-              <li>Service Offerings</li>
-              <li>Customer Success</li>
+              <li><a href="user-stories-solution-approach.html#deployment">Deployment Options</a></li>
+              <li><a href="user-stories-solution-approach.html#solution">Solution Engineerings Approach</a></li>
+              <li><a href="user-stories-solution-approach.html#service">Service Offerings</a></li>
+              <li><a href="user-stories-solution-approach.html#customer">Customer Success</a></li>
             </ul>
           </div>
           <div class="cb"></div>
@@ -390,6 +390,26 @@
       </div>
       <div class="col-12 text-center">
         <button class="btn btn-default btn-md" onclick="window.location.href='./product-features.html'">Find out more Features</button>
+      </div>
+    </div>
+  </section>
+  <section class="block-index-user-role block">
+    <div class="bg-fw-half-left bg-color-gray800"></div>
+    <div class="bg-fw-half-right bg-color-orange800"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6 block-index-user-role-item">
+          <h4 class="question">Who are you?</h4>
+          <h2 class="role-name">I’m a<br />Developer</h2>
+          <p class="description">See more embold’s features for Developer</p>
+          <div class="link-arrow"></div>
+        </div>
+        <div class="col-6 block-index-user-role-item">
+          <h4 class="question">Who are you?</h4>
+          <h2 class="role-name">I’m a<br />Product Manager</h2>
+          <p class="description font-wh">See more embold’s features for Product Manager or Dev-Ops</p>
+          <div class="link-arrow"></div>
+        </div>
       </div>
     </div>
   </section>
