--- a/embold.com/nav-company.html
+++ b/embold.com/nav-company.html
@@ -153,7 +153,7 @@
       <div class="nav-item-main">
         <a href="company-about.html" class="nav-menu-link">About</a>
         <ul class="nav-item-sub-list">
-          <li>Overall</li>
+          <li><a href="company-about.html#overall">Overall</a></li>
           <li>Timeline</li>
           <li>Offices</li>
         </ul>
