--- a/embold.com/nav-product.html
+++ b/embold.com/nav-product.html
@@ -32,43 +32,43 @@
       <div class="nav-item-main">
         <a href="product-overview.html" class="nav-menu-link">Overview</a>
         <ul class="nav-item-sub-list">
-          <li>Bug Prediction</li>
-          <li>Recommendation Engine</li>
-          <li>Scoring and A.I. Base Priorization</li>
-          <li>Refactoring</li>
+          <li><a href="product-overview.html#bug">Bug Prediction</a></li>
+          <li><a href="product-overview.html#recommendation">Recommendation Engine</a></li>
+          <li><a href="product-overview.html#scoring">Scoring and A.I. Base Priorization</a></li>
+          <li><a href="product-overview.html#refactoring">Refactoring</a></li>
         </ul>
       </div>
       <div class="nav-item-main">
         <a href="product-features.html" class="nav-menu-link">Features</a>
         <ul class="nav-item-sub-list">
-          <li>Artificial Intelligence</li>
-          <li>Integrated Platform</li>
-          <li>Accuracy and Completeness</li>
+          <li><a href="product-features.html#artificial">Artificial Intelligence</a></li>
+          <li><a href="product-features.html#integrated">Integrated Platform</a></li>
+          <li><a href="product-features.html#accuracy">Accuracy and Completeness</a></li>
         </ul>
       </div>
       <div class="nav-item-main">
         <a href="product-use-cases.html" class="nav-menu-link">Use Cases</a>
         <ul class="nav-item-sub-list">
-          <li>Productivity Management</li>
-          <li>Technical Debt Management</li>
-          <li>Supplier Monitoring</li>
-          <li>Onboarding and Training</li>
+          <li><a href="product-use-cases.html#productivity">Productivity Management</a></li>
+          <li><a href="product-use-cases.html#technical">Technical Debt Management</a></li>
+          <li><a href="product-use-cases.html#supplier">Supplier Monitoring</a></li>
+          <li><a href="product-use-cases.html#onboarding">Onboarding and Training</a></li>
         </ul>
       </div>
       <div class="nav-item-main">
         <a href="product-pricing.html" class="nav-menu-link">Pricing</a>
         <ul class="nav-item-sub-list">
-          <li>Cloud</li>
-          <li>On-Premise</li>
-          <li>Assessment Services</li>
+          <li><a href="product-pricing.html">Cloud</a></li>
+          <li><a href="product-pricing-on-premise.html">On-Premise</a></li>
+          <li><a href="product-pricing-enterprise.html">Assessment Services</a></li>
         </ul>
       </div>
       <div class="nav-item-main">
         <a href="product-partnership.html" class="nav-menu-link">Partnership</a>
         <ul class="nav-item-sub-list">
-          <li>Partnership</li>
-          <li>Open Source Sponsorships</li>
-          <li>Crypto</li>
+          <li><a href="product-partnership.html#partnership">Partnership</a></li>
+          <li><a href="product-partnership.html#open-source">Open Source Sponsorships</a></li>
+          <li><a href="product-partnership.html#crypto">Crypto</a></li>
         </ul>
       </div>
       <div class="cb"></div>
