--- a/embold.com/product-partnership.html
+++ b/embold.com/product-partnership.html
@@ -25,11 +25,12 @@
     <div class="header-image bg-product-partnership"></div>
   </div>
 
+  <a name="partnership"></a>
   <section class="container block block-section-sub block-section-left">
     <div class="row">
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">From Good to Great</h2>
+        <h2 class="section-title">Partnership</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="col-5">
@@ -37,6 +38,7 @@
       </div>
     </div>
   </section>
+  <a name="open-source"></a>
   <section class="container block block-section-sub block-section-right">
     <div class="row">
       <div class="col-1">
@@ -46,11 +48,12 @@
       </div>
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Multi-Dimensional Static Analysis</h2>
+        <h2 class="section-title">Open-source Sponsorships</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
     </div>
   </section>
+  <a name="smart-prioritization"></a>
   <section class="container block block-section-sub block-section-left">
     <div class="row">
       <div class="col-6">
@@ -60,20 +63,6 @@
       </div>
       <div class="col-5">
         <div class="il-alt background-no-repeat body-illustration"></div>
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-right">
-    <div class="row">
-      <div class="col-1">
-      </div>
-      <div class="col-5">
-        <div class="il-alt background-no-repeat body-illustration"></div>
-      </div>
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Anti-Pattern</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
     </div>
   </section>
