--- a/embold.com/user-stories-industry-financial.html
+++ b/embold.com/user-stories-industry-financial.html
@@ -34,13 +34,13 @@
             Select a your role
           </div>
           <div class="tab-wrap">
-            <div class="tab-item active" onclick="window.location.href='./user-stories-industry.html'">
+            <div class="tab-item" onclick="window.location.href='./user-stories-industry.html'">
               <div class="tab-item-icon ic-sm-user-executive"></div> <span>Automotive</span>
             </div>
             <div class="tab-item" onclick="window.location.href='./user-stories-industry-energy.html'">
               <div class="tab-item-icon ic-sm-user-developer"></div> <span>Energy</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-financial.html'">
+            <div class="tab-item active" onclick="window.location.href='./user-stories-industry-financial.html'">
               <div class="tab-item-icon ic-sm-user-architect"></div> <span>Financial and Insurance</span>
             </div>
             <div class="tab-item" onclick="window.location.href='./user-stories-industry-tmt.html'">
