--- a/embold.com/user-stories-team-size-business.html
+++ b/embold.com/user-stories-team-size-business.html
@@ -19,10 +19,10 @@
   <div class="container block block-header-sub">
     <div class="row">
       <div class="col-6">
-        <h1 class="header-sub-title">By Industry</h1>
+        <h1 class="header-sub-title">By Team Size</h1>
       </div>
     </div>
-    <div class="header-image bg-user-stories-industry "></div>
+    <div class="header-image bg-user-stories-team-size "></div>
   </div>
 
   <div class="tab-role">
@@ -34,20 +34,17 @@
             Select a your role
           </div>
           <div class="tab-wrap">
-            <div class="tab-item active" onclick="window.location.href='./user-stories-industry.html'">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Automotive</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-team-size.html'">
+              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Indivisuals</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-energy.html'">
-              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Energy</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-team-size-teams.html'">
+              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Teams</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-financial.html'">
-              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Financial and Insurance</span>
+            <div class="tab-item active" onclick="window.location.href='./user-stories-team-size-business.html'">
+              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Business</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-tmt.html'">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>TMT</span>
-            </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-natural.html'">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Natural Resources</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-team-size-enterprise.html'">
+              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Enterprise</span>
             </div>
           </div>
         </div>
