--- a/embold.com/user-stories-team-size.html
+++ b/embold.com/user-stories-team-size.html
@@ -34,17 +34,17 @@
             Select a your role
           </div>
           <div class="tab-wrap">
-            <div class="tab-item active">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Executive</span>
+            <div class="tab-item active" onclick="window.location.href='./user-stories-team-size.html'">
+              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Indivisuals</span>
             </div>
-            <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developer</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-team-size-teams.html'">
+              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Teams</span>
             </div>
-            <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architect</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-team-size-business.html'">
+              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Business</span>
             </div>
-            <div class="tab-item">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Manager</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-team-size-enterprise.html'">
+              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Enterprise</span>
             </div>
           </div>
         </div>
