--- a/embold.com/nav-solutions.html
+++ b/embold.com/nav-solutions.html
@@ -30,7 +30,7 @@
     </div>
     <div class="nav-wrap-items">
       <div class="nav-item-main">
-        <a href="product-overview.html" class="nav-menu-link">Overview</a>
+        <a href="product-overview.html" class="nav-menu-link">About Gamma</a>
         <ul class="nav-item-sub-list">
           <li>Bug Prediction</li>
           <li>Recommendation Engine</li>
@@ -38,14 +38,7 @@
           <li>Refactoring</li>
         </ul>
       </div>
-      <div class="nav-item-main">
-        <a href="product-features.html" class="nav-menu-link">Features</a>
-        <ul class="nav-item-sub-list">
-          <li>Artificial Intelligence</li>
-          <li>Integrated Platform</li>
-          <li>Accuracy and Completeness</li>
-        </ul>
-      </div>
+
       <div class="nav-item-main">
         <a href="product-use-cases.html" class="nav-menu-link">Use Cases</a>
         <ul class="nav-item-sub-list">
@@ -58,17 +51,10 @@
       <div class="nav-item-main">
         <a href="product-pricing.html" class="nav-menu-link">Pricing</a>
         <ul class="nav-item-sub-list">
+          <li>Free (For Open-source Project)</li>
           <li>Cloud</li>
           <li>On-Premise</li>
           <li>Assessment Services</li>
-        </ul>
-      </div>
-      <div class="nav-item-main">
-        <a href="product-partnership.html" class="nav-menu-link">Partnership</a>
-        <ul class="nav-item-sub-list">
-          <li>Partnership</li>
-          <li>Open Source Sponsorships</li>
-          <li>Crypto</li>
         </ul>
       </div>
       <div class="cb"></div>
@@ -101,17 +87,17 @@
         <a href="user-stories-industry.html" class="nav-menu-link">By Industry</a>
         <ul class="nav-item-sub-list">
           <li>Automotive</li>
-          <li>Energy</li>
-          <li>Financial and Insurance</li>
-          <li>TMT</li>
-          <li>Natural Resources</li>
+          <li>Financial</li>
+          <li>Industrial</li>
+          <li>Technology/Telecom</li>
+          <li>Others</li>
         </ul>
       </div>
       <div class="nav-item-main">
         <a href="user-stories-solution-approach.html" class="nav-menu-link">Solution Approach</a>
         <ul class="nav-item-sub-list">
           <li>Deployment Options</li>
-          <li>Solution Engineerings Approach</li>
+          <li>Solution Approach</li>
           <li>Service Offerings</li>
           <li>Customer Success</li>
         </ul>
