--- a/embold.com/nav-product.html
+++ b/embold.com/nav-product.html
@@ -3,13 +3,13 @@
     <a href="index.html"><img src="images/logo-embold.svg" width="113" height="20" /></a>
   </div>
   <div class="nav-wrap-items">
-    <div class="nav-item-main nav-item-main-product">
+    <div class="nav-item-main nav-item-main-product active-menu">
       <span class="product" id="menu-item-product">Product <i class="fas fa-angle-down"></i></span>
     </div>
     <div class="nav-item-main nav-item-main-solutions">
       <span class="user-stories" id="menu-item-solutions">Solutions <i class="fas fa-angle-down"></i></span>
     </div>
-    <div class="nav-item-main nav-item-main-resources active-menu">
+    <div class="nav-item-main nav-item-main-resources">
       <span class="resources"id="menu-item-resources">Resources <i class="fas fa-angle-down"></i></span>
     </div>
     <div class="nav-item-main nav-item-main-company">
@@ -30,45 +30,31 @@
     </div>
     <div class="nav-wrap-items">
       <div class="nav-item-main">
-        <a href="product-overview.html" class="nav-menu-link">Overview</a>
+        <a href="product-overview.html" class="nav-menu-link">About Gamma</a>
         <ul class="nav-item-sub-list">
-          <li><a href="product-overview.html#bug">Bug Prediction</a></li>
-          <li><a href="product-overview.html#recommendation">Recommendation Engine</a></li>
-          <li><a href="product-overview.html#scoring">Scoring and A.I. Base Priorization</a></li>
-          <li><a href="product-overview.html#refactoring">Refactoring</a></li>
+          <li>Bug Prediction</li>
+          <li>Recommendation Engine</li>
+          <li>Scoring and A.I. Base Priorization</li>
+          <li>Refactoring</li>
         </ul>
       </div>
-      <div class="nav-item-main">
-        <a href="product-features.html" class="nav-menu-link">Features</a>
-        <ul class="nav-item-sub-list">
-          <li><a href="product-features.html#artificial">Artificial Intelligence</a></li>
-          <li><a href="product-features.html#integrated">Integrated Platform</a></li>
-          <li><a href="product-features.html#accuracy">Accuracy and Completeness</a></li>
-        </ul>
-      </div>
+
       <div class="nav-item-main">
         <a href="product-use-cases.html" class="nav-menu-link">Use Cases</a>
         <ul class="nav-item-sub-list">
-          <li><a href="product-use-cases.html#productivity">Productivity Management</a></li>
-          <li><a href="product-use-cases.html#technical">Technical Debt Management</a></li>
-          <li><a href="product-use-cases.html#supplier">Supplier Monitoring</a></li>
-          <li><a href="product-use-cases.html#onboarding">Onboarding and Training</a></li>
+          <li>Productivity Management</li>
+          <li>Technical Debt Management</li>
+          <li>Supplier Monitoring</li>
+          <li>Onboarding and Training</li>
         </ul>
       </div>
       <div class="nav-item-main">
         <a href="product-pricing.html" class="nav-menu-link">Pricing</a>
         <ul class="nav-item-sub-list">
-          <li><a href="product-pricing.html">Cloud</a></li>
-          <li><a href="product-pricing-on-premise.html">On-Premise</a></li>
-          <li><a href="product-pricing-enterprise.html">Assessment Services</a></li>
-        </ul>
-      </div>
-      <div class="nav-item-main">
-        <a href="product-partnership.html" class="nav-menu-link">Partnership</a>
-        <ul class="nav-item-sub-list">
-          <li><a href="product-partnership.html#partnership">Partnership</a></li>
-          <li><a href="product-partnership.html#open-source">Open Source Sponsorships</a></li>
-          <li><a href="product-partnership.html#crypto">Crypto</a></li>
+          <li>Free (For Open-source Project)</li>
+          <li>Cloud</li>
+          <li>On-Premise</li>
+          <li>Assessment Services</li>
         </ul>
       </div>
       <div class="cb"></div>
