--- a/embold.com/product-use-cases.html
+++ b/embold.com/product-use-cases.html
@@ -84,7 +84,7 @@
 
   <!-- landing to other page block -->
   <div class="container-fluid bg-orange">
-    <div class="container block">
+    <div class="container block block-bottom-area">
       <div class="row">
         <div class="col-12 text-center">
           <h4>Contact us</h4>
